--- a/resources/css/additional.css
+++ b/resources/css/additional.css
@@ -1,1 +1,52 @@
-#faveButton.faveProperty .x-button-icon{background:yellow}#home .x-form-fieldset-title{white-space:normal}.resultlistitem{border-style:solid;border-color:#dedede}.x-dataview-emptytext{color:gray;margin:10px;font-size:20px;text-align:center}.searcheslistitem{background:white;border-style:solid;border-color:#dedede;border-width:1px 1px 0}.searcheslistitem:first-of-type{-webkit-border-top-left-radius:8px;-webkit-border-top-right-radius:8px}.searcheslistitem:last-of-type{-webkit-border-bottom-left-radius:8px;-webkit-border-bottom-right-radius:8px;border-bottom-width:1px}.searchcount>*{font-size:12px;padding:5px;-webkit-border-radius:8px;border:1px solid #dedede;font-weight:bold}
+/*
+	Contains workarounds for various shortcomings of sencha touch
+*/
+
+/* Star icon is yellow for favourite properties */
+#faveButton.faveProperty .x-button-icon {
+    background: yellow;
+}
+
+/* Forces the field set title on the home page to wrap onto a second line. See http://davehiren.blogspot.co.uk/2012/05/sencha-touch-field-set-title-wrap-to.html */
+#home .x-form-fieldset-title {
+    white-space: normal
+}
+
+/* Need to define the border for the list items. See http://www.sencha.com/forum/showthread.php?233290 */
+.resultlistitem {
+    border-style: solid;
+    border-color: #DEDEDE;
+}
+
+.x-dataview-emptytext {
+    color: gray;
+    margin: 10px;
+    font-size: 20px;
+    text-align: center;
+}
+
+.searcheslistitem {
+    background: white;
+    border-style: solid;
+    border-color: #DEDEDE;
+    border-width: 1px 1px 0px;
+}
+
+.searcheslistitem:first-of-type {
+    -webkit-border-top-left-radius: 8px;
+    -webkit-border-top-right-radius: 8px;
+}
+
+.searcheslistitem:last-of-type {
+    -webkit-border-bottom-left-radius: 8px;
+    -webkit-border-bottom-right-radius: 8px;
+    border-bottom-width: 1px; /* annoyingly doesn't seem to be a way to set this in JS using border property */
+}
+
+.searchcount > * {
+    font-size: 12px;
+    padding: 5px;
+    -webkit-border-radius: 8px;
+    border: 1px solid #DEDEDE;
+    font-weight: bold;
+}
